# optimize

./: CMakeLists.txt  Doxyfile  README.md  basic.py  basic.py~  units.py  units.py~
example/: CMakeLists.txt  ex_find_mle.cpp  ex_mt.cpp
optimize/: function.hpp  line_search.hpp  minimizer.hpp  minimizer_bfgs.hpp  minimizer_nm.hpp  pybindings.hpp  scalar_search.hpp  variable.hpp
python/: ex_minimize.py
src/: CMakeLists.txt  function.cpp  line_search.cpp  minimizer.cpp  minimizer_bfgs.cpp  minimizer_nm.cpp  pybindings.cpp  scalar_search.cpp  variable.cpp
test/: CMakeLists.txt  test_func_var.cpp  test_line_search.cpp  test_minimizer.cpp
